--- a/第四章：线程安全.md
+++ b/第四章：线程安全.md
@@ -1,1 +1,61 @@
 # 线程安全性——原子性
+## atomic包
+```java
+@ThreadSafe
+@Slf4j
+public class CountExample2 {
+    //请求总数
+    public static int clientTotal = 5000;
+
+    //同时并发执行的线程数
+    public static int threadTotal = 200;
+
+    public static AtomicInteger count = new AtomicInteger(0);
+
+    public static void add(){
+        count.incrementAndGet();
+        //count.getAndIncrement();
+    }
+
+    public static void main(String[] args) throws Exception {
+        ExecutorService executorService = Executors.newCachedThreadPool();
+        final Semaphore semaphore = new Semaphore(threadTotal);
+        final CountDownLatch countDownLatch = new CountDownLatch(clientTotal);
+
+        for (int i = 0;i<clientTotal;i++){
+            executorService.execute(()->{
+                try {
+                    semaphore.acquire();  //到达一定量的并发之后，add就会阻塞
+                    add();
+                    semaphore.release();
+                } catch (InterruptedException e) {
+                    log.error("exception",e);
+                }
+                countDownLatch.countDown(); //每执行完一次之后，计数器就减1
+
+            });
+        }
+
+        countDownLatch.await();  //所有线程执行完之后打印count值
+        executorService.shutdown();
+        log.info("count:{}",count.get());
+
+    }
+}
+```
+线程安全的写法，atomic是如何做到线程安全的？以下是源码分析：
+```java
+        public final int getAndAddInt(Object var1, long var2, int var4) {
+        int var5;
+        do {
+            var5 = this.getIntVolatile(var1, var2);
+        } while(!this.compareAndSwapInt(var1, var2, var5, var5 + var4));
+//var1是当前的对象，var2和var4是相加的两个数，而var5是底层值，不断判断若当前值和底层值相同的情况下，才进行运算并覆盖底层值。（其他线程修改之后当前值和底层值会不同，因为count的值是存在工作内存中，而var的值是存在主内存中的）
+        return var5;
+    }
+```
+
+## synchronized 实现原子性
+* syn 可修饰类和静态方法，作用对象是所有对象，修饰方法和代码块的时候作用的对象是调用的对象。
+
+
