--- a/第四章：线程安全.md
+++ b/第四章：线程安全.md
@@ -57,5 +57,61 @@ public class CountExample2 {
 
 ## synchronized 实现原子性
 * syn 可修饰类和静态方法，作用对象是所有对象，修饰方法和代码块的时候作用的对象是调用的对象。
+syn是不可中断的锁，必须等被锁的对象执行完之后才能释放锁,适用于竞争不激烈的场景，lock是可中断的锁，只要调用unlock即可，和atomic包一样都适用于竞争激烈的场景。
+```
+package com.mmall.concurrency.example.sync;
 
+import lombok.extern.slf4j.Slf4j;
+import org.apache.tomcat.util.ExceptionUtils;
 
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
+/**
+ * @Auther: Think
+ * @Date: 2018/9/23 14:40
+ * @Description:
+ */
+@Slf4j
+public class SynchronizedExample1 {
+
+    //修饰一个代码块
+    public void test1(){
+        synchronized (this){
+            for (int i = 0;i<10;i++){
+                log.info("test1 - {}"+i);
+            }
+        }
+    }
+
+    //修饰一个方法
+    public synchronized  void test2(){
+        for (int i = 0;i<10;i++){
+           log.info("test2 - {}"+i);
+        }
+    }
+
+    public static void main(String[] args) {
+        SynchronizedExample1 example1 = new SynchronizedExample1();
+        ExecutorService executorService = Executors.newCachedThreadPool();
+        //使用线程池将同一个对象同时调用执行
+        executorService.execute(() -> {
+            example1.test1();
+        });
+        executorService.execute(() -> {
+            example1.test1();
+        });
+    }
+}
+```
+
+## 可见性
+* sync实现可见性：解锁之前将工作内存中的数据刷新至主内存中，上锁的时候在主内存中读取最新的数据
+* volatile  
+通过内存屏障和禁止重排实现可见性  
+对volitale实现写操作的时候，会在写操作之后加入store指令将本地内存中的变量刷新到内存中，对volatile实现读操作时会在读之前加入load指令从主内存中读取共享变量。  适用场景：对变量的写操作不依赖于其他值，该变量不包含在其他变量中，适用于做状态标识。
+但是volatile变量也不能完全实现原子性，如加操作中count是被修饰的变量，执行count++，这一句分为三步：将取主存中的count值，进行+1操作，将count写回主内存，如果两个线程同时写回主内存，相当于少了一步++的操作
+
+## 有序性
+指令重排
