--- a/第五章：安全发布对象.md
+++ b/第五章：安全发布对象.md
@@ -54,3 +54,152 @@ public class Escape {
 * 将对象的引用保存到volatile类型域或者AtomicReference对象中
 * 将对象的引用保存到某个正确构造对象的final类型域中
 * 将对象的引用保存到由锁保护的域中
+## 单例模式
+```java
+/*
+* 懒汉模式：第一次使用的时候进行创建，但如果两个线程同时拿到instance==null的时候就会同时
+* 执行new方法创建对象
+* */
+@NotThreadSafe
+public class SingletonEx1 {
+    //私有的构造函数
+    private SingletonEx1(){
+
+    }
+    //单例对象
+    private static SingletonEx1 instance = null;
+
+    //静态工厂方法
+    public static SingletonEx1 getInstance(){
+        if (instance == null) {
+            instance = new SingletonEx1();
+        }
+        return instance;
+    }
+}
+```
+```java
+/*
+* 饿汉模式:线程安全，但是会引起性能的问题，类一加载就实例化，提前占用系统资源
+* */
+@ThreadSafe
+class SingletonEx2 {
+    //私有的构造函数
+    private SingletonEx2(){
+
+    }
+    //单例对象
+    private static SingletonEx2 instance = new SingletonEx2();
+
+    //静态工厂方法
+    public static SingletonEx2 getInstance(){
+        return instance;
+    }
+}
+
+
+/*
+* 双重锁饿汉模式：仍然是线程不安全的
+* 执行new操作的时候：1、memory = allocate()分配对象内存空间
+*                 2、ctorInstance()初始化对象
+*                 3、instance = memory 设置instance指向刚分配的内存
+*
+* JVM和CPU发生指令重排：指令按照1，3，2执行，如下A执行到了3，B判断的时候instance不为null
+* 但是此时A还没有对对象进行初始化，B直接调用会出现问题
+* */
+@NotThreadSafe
+class SingletonEx3 {
+    //私有的构造函数
+    private SingletonEx3(){
+
+    }
+    //单例对象
+    private static SingletonEx3 instance = null;
+
+    //静态工厂方法
+    public static SingletonEx3 getInstance(){
+        if (instance == null) {  //B
+            synchronized (SingletonEx3.class){
+                if (instance == null) {
+                    instance = new SingletonEx3();  //A-3
+                }
+            }
+        }
+        return instance;
+    }
+}
+
+
+/*
+* 使用volitale限制指令重排
+* */
+@ThreadSafe
+class SingletonEx4 {
+    //私有的构造函数
+    private SingletonEx4(){
+
+    }
+    //单例对象 volatile + 双重检测机制
+    private volatile static SingletonEx4 instance = null;
+
+    //静态工厂方法
+    public static SingletonEx4 getInstance(){
+        if (instance == null) {  //B
+            synchronized (SingletonEx3.class){
+                if (instance == null) {
+                    instance = new SingletonEx4();  //A-3
+                }
+            }
+        }
+        return instance;
+    }
+}
+
+
+@ThreadSafe
+class SingletonEx5 {
+    //私有的构造函数
+    private SingletonEx5(){
+
+    }
+    //单例对象
+    private static SingletonEx5 instance = null;
+
+    static {
+        instance = new SingletonEx5();
+    }
+   
+    //静态工厂方法
+    public static SingletonEx5 getInstance(){
+        return instance;
+    }
+}
+
+
+/*
+* 枚举类型：线程安全
+* */
+class SingletonEx6{
+    private SingletonEx6(){
+        
+    }
+    public static SingletonEx6 getInstance(){
+        return Singleton.INSTANCE.getInstance();
+    }
+    //JVM保证这个方法只调用一次
+    private enum Singleton{
+        INSTANCE;
+        private SingletonEx6 singleton;
+        
+        Singleton(){
+            singleton = new SingletonEx6();
+        }
+        public SingletonEx6 getInstance(){
+            return singleton;
+        }
+        
+    }
+}
+
+```
+
