--- a/第六章：线程安全策略.md
+++ b/第六章：线程安全策略.md
@@ -32,3 +32,232 @@ public class ImmutableEx1 {
 * 堆栈封闭：局部变量，不会被多个线程共享，无并发的问题
 * ThreadLocal 线程封闭 ：特别好的封装方法。其中维护了一个MAP，map的key是线程的名称，其值是线程封装的对象  
 >threadLocal的代码实现如下
+模拟的url请求，每一个请求都是一个线程，通过Filter取出当前的用户，将数据存入threadLocal中，在接口处理之前存入请求信息，在接口处理的时候根据需要取出threadLocal的值,threadLocal的工作：add，getId，remove
+```java
+/**
+ * @Auther: Think
+ * @Date: 2018/9/26 14:25
+ * @Description: 存储需要的用户信息
+ */
+public class RequestHolder {
+    private final static ThreadLocal<Long> requestHolder = new ThreadLocal<>();
+    public static void add(Long id){
+        requestHolder.set(id);//add是在接口处理之前调用，请求进入后台服务器但是还没有进行相应的处理的时候，将信息存储进去
+        //使用Filter对URL进行拦截，前台将信息写入threadLocal中去
+    }
+    public static Long getId(){
+        return requestHolder.get();
+    }
+    public static void remove(){
+        requestHolder.remove();
+        //在接口处理之后调用， 防止内存泄漏，这个类会伴随项目的运行，只有当项目重新启动的时候才能将内存释放掉
+    }
+}
+```
+>Filter类
+```java
+/**
+ * @Auther: Think
+ * @Date: 2018/9/26 14:09
+ * @Description:拦截器
+ */
+@Slf4j
+public class HttpFilter implements Filter {
+    @Override
+    public void init(FilterConfig filterConfig) throws ServletException {
+
+    }
+
+    @Override
+    public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain) throws IOException, ServletException {
+        HttpServletRequest request = (HttpServletRequest)servletRequest;
+        log.info("do filter ,{},{}",Thread.currentThread().getId(),request.getServletPath());
+        RequestHolder.add(Thread.currentThread().getId());  //请求进来的时候，将线程id存储在threadlocal中
+        //数据不进行拦截只做单纯的数据处理，使用filterChain
+        filterChain.doFilter(servletRequest,servletResponse);
+    }
+
+    @Override
+    public void destroy() {
+
+    }
+}
+```
+>需要对filter进行配置告诉服务器需要拦截哪些请求
+```java
+package com.mmall.concurrency;
+
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
+import org.springframework.context.annotation.Bean;
+import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurationSupport;
+
+import javax.servlet.FilterRegistration;
+import java.io.File;
+import java.util.logging.Filter;
+
+@SpringBootApplication
+public class ConcurrencyApplication extends WebMvcConfigurationSupport {
+
+	public static void main(String[] args) {
+		SpringApplication.run(ConcurrencyApplication.class, args);
+	}
+	@Bean
+	public FilterRegistrationBean httpFilter(){
+		FilterRegistrationBean registrationBean = new FilterRegistrationBean();
+		registrationBean.setFilter(new HttpFilter()); //设置filter类
+		registrationBean.addUrlPatterns("/threadLocal/*"); //设置url拦截类型
+		return registrationBean;
+	}
+
+	@Override
+	protected void addInterceptors(InterceptorRegistry registry) {
+		registry.addInterceptor(new HttpInterceptor()).addPathPatterns("/**");
+	}
+}
+```
+>接口
+```java
+@Slf4j
+public class HttpInterceptor extends HandlerInterceptorAdapter {
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+       log.info("preHandle");  //接口处理前
+        return true;
+    }
+
+    @Override
+    public void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception {
+        RequestHolder.remove();  //处理完之后将id 移除，避免内存泄漏
+        log.info("afterCompletion");
+        return;
+
+    }
+}
+```
+>同样需要对这个类进行配置（参见上面配置代码）.请求进来的时候通过filter将进程id存入threadLocal中，接口处理的时候可以直接调用id值，接口处理代码如下
+```java
+/**
+ * @Auther: Think
+ * @Date: 2018/9/26 14:43
+ * @Description:
+ */
+@Controller  //提供接口
+@RequestMapping("/threadLocal")
+public class ThreadLocalController {
+
+    @RequestMapping("/test")
+    @ResponseBody
+    public Long test(){
+        return RequestHolder.getId();  //实际处理的时候直接调用这个类进行处理获取线程id
+    }
+
+}
+```
+>本例ThreadLocal主要实现的三个功能add，getId，remove，通过拦截器将threadId添加到threadLocal中，在数据处理完之后在Intercepetor中将数据移除，在进行接口处理的时候（ThreadLocalController），可以实时的在threadLocal中取出id数据
+
+
+# 线程不安全的类和写法
+* StringBuffer,StringBuilder
+>StringBuilder 线程不安全的类（输出4991）
+```java
+@NotThreadSafe
+@Slf4j
+public class StringEx1 {
+        //请求总数
+        public static int clientTotal = 5000;
+
+        //同时并发执行的线程数
+        public static int threadTotal = 200;
+
+        public static StringBuilder stringBuilder = new StringBuilder();
+
+
+        public static void main(String[] args) throws Exception {
+            ExecutorService executorService = Executors.newCachedThreadPool();
+            final Semaphore semaphore = new Semaphore(threadTotal);
+            final CountDownLatch countDownLatch = new CountDownLatch(clientTotal);
+
+            for (int i = 0;i<clientTotal;i++){
+                executorService.execute(()->{
+                    try {
+                        semaphore.acquire();  //到达一定量的并发之后，add就会阻塞
+                        update();
+                        semaphore.release();
+                    } catch (InterruptedException e) {
+                        log.error("exception",e);
+                    }
+                    countDownLatch.countDown(); //每执行完一次之后，计数器就减1
+
+                });
+            }
+
+            countDownLatch.await();  //所有线程执行完之后打印count值
+            executorService.shutdown();
+            log.info("size:{}",stringBuilder.length());
+
+        }
+
+    private static void update() {
+        stringBuilder.append("1");  //线程安全的话打印出的值应该是5000
+    }
+}
+```
+>StringBuffer线程安全的，源码中的每一个实现方法都加了syn，同一时间只有一个线程进行处理，性能不好，在单个方法中（堆栈封闭），可使用StringBuilder
+
+* ArrayList，HashSet，HashMap  这三个均为线程不安全的类
+```java
+@Slf4j
+public class ArrayListEx {
+    //请求总数
+    public static int clientTotal = 5000;
+
+    //同时并发执行的线程数
+    public static int threadTotal = 200;
+
+    public static List<Integer> list = new ArrayList<>();
+
+
+    public static void main(String[] args) throws Exception {
+        ExecutorService executorService = Executors.newCachedThreadPool();
+        final Semaphore semaphore = new Semaphore(threadTotal);
+        final CountDownLatch countDownLatch = new CountDownLatch(clientTotal);
+
+        for (int i = 0;i<clientTotal;i++){
+            final int count  = i;
+            executorService.execute(()->{
+                try {
+                    semaphore.acquire();  //到达一定量的并发之后，add就会阻塞
+                    update(count);
+                    semaphore.release();
+                } catch (InterruptedException e) {
+                    log.error("exception",e);
+                }
+                countDownLatch.countDown(); //每执行完一次之后，计数器就减1
+
+            });
+        }
+
+        countDownLatch.await();  //所有线程执行完之后打印count值
+        executorService.shutdown();
+        log.info("size:{}",list.size());
+
+    }
+
+    private static void update(int i ) {
+        list.add(i);  //线程安全的话打印出的值应该是5000
+    }
+}
+```
+
+
+
+
+
+
+
+
+
