--- a/第六章：线程安全策略.md
+++ b/第六章：线程安全策略.md
@@ -253,6 +253,40 @@ public class ArrayListEx {
 }
 ```
 
+## 同步容器
+```java
+package com.mmall.concurrency.example.sync.syncContainer;
+
+import java.util.Vector;
+
+/**
+ * @Auther: Think
+ * @Date: 2018/10/8 09:07
+ * @Description:
+ */
+public class VectorEx {
+    public static void main(String[] args) {
+        Vector<Integer> vector = new Vector<>();
+        vector.add(1);
+        vector.add(2);
+        vector.add(3);
+        test1(vector);
+    }
+
+    //Exception in thread "main" java.util.ConcurrentModificationException
+    private static void test1(Vector<Integer> v1) {
+        //在遍历的过程中有remove的操作
+        for (Integer i : v1){
+            if (i.equals(3)){
+                v1.remove(i);
+            }
+        }
+
+    }
+}
+
+```
+
 
 
 
