--- a/第十章：多线程并发拓展.md
+++ b/第十章：多线程并发拓展.md
@@ -10,3 +10,6 @@
 别人已经占有了某项资源，你不能因为自己也需要该资源，就去把别人的资源抢过来。  
 * 循环等待：  
 存在一个进程链，使得每个进程都占有下一个进程所需的至少一种资源。
+# 多线程的并发最佳实践
+> 以下内容转载自https://www.jdon.com/concurrent/java-multithreading-best-pratices.html
+
