--- a/第十章：多线程并发拓展.md
+++ b/第十章：多线程并发拓展.md
@@ -12,4 +12,33 @@
 存在一个进程链，使得每个进程都占有下一个进程所需的至少一种资源。
 # 多线程的并发最佳实践
 > 以下内容转载自https://www.jdon.com/concurrent/java-multithreading-best-pratices.html
+# HashMap和concurrentHashMap
+> 以下内容转载自http://www.php.cn/java-article-372435.html 和 https://www.jianshu.com/p/258e26d5530a
+## HashMap  
+寻址方式：  
+实现哈希表的效果，尽量实现O（1）级别的增删改查，对于新插入的数据或者待读取的数据，HashMap将Key的哈希值对数组长度取模，结果作为该Entry在数组中的index。在计算机中，取模的代价远高于位操作的代价，因此HashMap要求数组的长度必须为2的N次方。此时将Key的哈希值对2^N-1进行与运算，其效果即与取模等效。HashMap并不要求用户在指定HashMap容量时必须传入一个2的N次方的整数，而是会通过Integer.highestOneBit算出比指定整数小的最大的2^N值，由于Key的哈希值的分布直接决定了所有数据在哈希表上的分布或者说决定了哈希冲突（hash值是对数组长度取模，取hash值的低N位作为在数组中的索引）的可能性，因此为防止糟糕的Key的hashCode实现（例如低位都相同，只有高位不相同，与2^N-1取与后的结果都相同），JDK 1.7的HashMap通过如下方法使得最终的哈希值的二进制形式中的1尽量均匀分布从而尽可能减少哈希冲突。
+```java
+int h = hashSeed;
+h ^= k.hashCode();
+h ^= (h >>> 20) ^ (h >>> 12);return h ^ (h >>> 7) ^ (h >>> 4);
+```
+hashMap扩容：  
+具体方法是，创建一个新的，长度为原来Capacity两倍的数组，保证新的Capacity仍为2的N次方，从而保证上述寻址方式仍适用。同时需要通过transfer方法将原来的所有数据全部重新插入（rehash）到新的数组中。  
+具体过程在[博文](http://www.importnew.com/22011.html)中有详细讲解，以下内容转载自该博文：  
+单线程情况下的插入：  
+* 假设hash算法就是最简单的 key mod table.length（也就是数组的长度）。
+* old hash 表，其中的Hash表的 size = 2, 所以 key = 3, 7, 5，在 mod 2以后碰撞发生在 table[1]
+* 接下来的三个步骤是 Hash表 resize 到4，并将所有的 <key,value> 重新rehash到新 Hash 表的过程，mod4之后key对应的索引会在不同的table里面。
+这里很容易就想到多线程情况下，隐约感觉这个transfer方法在多线程环境下会乱套。事实上也是这样的，由于缺乏同步机制，当多个线程同时resize的时候，某个线程t所持有的引用next，可能已经被转移到了新桶数组中，那么最后该线程t实际上在对新的桶数组进行transfer操作。形成循环链表后由于transfer方法没有同步机制，导致多个线程对新生成的循环链表进行扩容操作，一旦Entry链中有环，势必会导致在同一个桶中进行插入、查询、删除等操作时陷入死循环。因此HashMap是线程不安全的，在多线程的情况下应该使用concurrenHashMap  
+> 补充：为什么hashMap的长度要满足2的幂次  
 
+通过限制length是一个2的幂数，h & (length-1)和h % length结果是一致的。这就是为什么要限制容量必须是一个2的幂的原因。&操作比%和/操作更快。
+## concurrentHashMap
+详细内容参见[博文](https://blog.csdn.net/justloveyou_/article/details/72783008)
+HashTable容器在竞争激烈的并发环境下表现出效率低下的原因，是因为所有访问HashTable的线程都必须竞争同一把锁，那假如容器里有多把锁，每一把锁用于锁容器其中一部分数据，那么当多线程访问容器里不同数据段的数据时，线程间就不会存在锁竞争，从而可以有效的提高并发访问效率，这就是ConcurrentHashMap所使用的锁分段技术，首先将数据分成一段一段的存储，然后给每一段数据配一把锁，当一个线程占用锁访问其中一个段数据的时候，其他段的数据也能被其他线程访问。  
+ConcurrentHashMap是由Segment数组结构和HashEntry数组结构组成。Segment是一种可重入锁ReentrantLock，在ConcurrentHashMap里扮演锁的角色，HashEntry则用于存储键值对数据。一个ConcurrentHashMap里包含一个Segment数组，Segment的结构和HashMap类似，是一种数组和链表结构， 一个Segment里包含一个HashEntry数组，每个HashEntry是一个链表结构的元素， 每个Segment守护者一个HashEntry数组里的元素,当对HashEntry数组的数据进行修改时，必须首先获得它对应的Segment锁。  
+> ConcurrentHashMap与HashMap相比，有以下不同点：
+
+* ConcurrentHashMap线程安全，而HashMap非线程安全
+* HashMap允许Key和Value为null，而ConcurrentHashMap不允许 
+* HashMap不允许通过Iterator遍历的同时通过HashMap修改，而ConcurrentHashMap允许该行为，并且该更新对后续的遍历可见
